# solanasurvivors

./: .gitignore  Anchor.toml  README.md  ROADMAP.md  downscale_assets.py  generate_assets.py  package-lock.json  package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: config.ts  main.ts
apps/web/src/entities/: Enemy.ts  Player.ts  Projectile.ts  XPGem.ts
apps/web/src/integration/: DummyAdapters.ts  EnemyPoolService.ts  GameServices.ts  HeliusNftProvider.ts  LeaderboardService.ts  SessionKeyManager.ts  SolanaWalletAdapter.ts
apps/web/src/scenes/: ArenaScene.ts  BootScene.ts  GameOverScene.ts  HomeScene.ts  LeaderboardScene.ts  LevelUpScene.ts  PauseScene.ts  RunScene.ts  SacrificeScene.ts
apps/web/src/systems/: CombatSystem.ts  InputManager.ts  SpawnDirector.ts  UpgradeSystem.ts
apps/web/src/ui/: DamageNumber.ts  HUD.ts  textStyles.ts
apps/web/src/weapons/: BaseWeapon.ts  BombToss.ts  ChainLightning.ts  DroneSummon.ts  KnifeFan.ts  MagicBolt.ts  OrbitAura.ts  WeaponManager.ts
idl/: arena.json
programs/arena/: Anchor.toml  Cargo.toml
programs/arena/src/: lib.rs
scripts/: mint-demo-nfts.ts  package-lock.json  package.json  setup-devnet.ts
