[package]
name = "arena"
version = "0.1.0"
description = "Community Arena Vault for Solana Survivors"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.32.1", features = ["token"] }
mpl-token-metadata = "5.1"
session-keys = { version = "=3.0.10", features = ["no-entrypoint"] }
